Signup-component API added

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.2.0",
     "redux-promise": "^0.6.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
